# Adversa

./: .env.example  .gitignore  Dockerfile  README.md  adversa  docker-compose.yml  main.py  pyproject.toml
configs/: example-config.yaml  juiceshop.config.yaml
docker/temporal/dynamicconfig/: development-sql.yaml
docs/: architecture.md  artifact-schemas.md  phase-contracts.md  product.md
src/: types.py
src/agents/: _shared.py  pre_recon.py  recon.py
src/artifacts/: schemas.py  store.py
src/audit/: logger.py
src/config/: loader.py  models.py
src/scope/: can_use_tool.py  enforcer.py
src/services/: agent_runner.py  joern_query.py  preflight.py  repo_introspection.py
src/temporal/: activities.py  client.py  worker.py  workflows.py
tests/: test_artifact_store.py  test_config.py  test_pre_recon.py  test_preflight.py  test_recon.py  test_repo_introspection.py  test_scope.py
