[project]
name = "adversa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.48",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langfuse>=3.0.0",
    "langsmith[claude-agent-sdk,otel]>=0.7.17",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "temporalio>=1.23.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
